Fix landscape issue on mobile

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,5 @@
 #home {
-    height: calc(100vh - 4rem);
+    height: 100%;
     width: 100vw;
     margin: 0 auto;
     overflow: hidden;
@@ -63,16 +63,12 @@
     width: auto;
 }
 
+.additionalContent {
+    display: flex;
+    flex-direction: column;
+}
+
 @media screen and (max-width: 850px) {
-    #home {
-        height: 100vh;
-    }
-
-    .mobileEmphasis {
-        background: white;
-        border-radius:0.25rem;
-    }
-
     .mobileCenter {
         text-align: center;
     }
@@ -80,21 +76,31 @@
     .introContent {
         margin-left: 0rem;
         margin-top: 15vh;
-        font-size: 10vw;
         align-items: center;
     }
 
     .smallHeader {
         font-size: 1rem;
+        background: white;
+        border-radius:0.25rem;
     }
 
     .largeHeader  {
         font-size: 2rem;
         text-align: center;
+        background: white;
+        border-radius:0.25rem;
     }
 
     .introParagraph {
         text-align: center;
+        background: white;
+        border-radius:0.25rem;
+    }
+
+    .additionalContent {
+        justify-content: center;
+        align-items: center;
     }
 
     .homeButton {
